--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ version: 3.0.0
 # Navbar page list
 nav:
   - title: Blog
-    url: /archive
+    url: /CodingBlog/archive
 
   - title: About
-    url: /about
+    url: /CodingBlog/about
