--- a/_config.yml
+++ b/_config.yml
@@ -41,6 +41,10 @@ version: 3.0.0
 
 # Navbar page list
 nav:
+
+  - title: Dark Poole
+  url: /CodingBlog
+
   - title: Blog
     url: /CodingBlog/archive
 
